# qhana

./: .gitignore  NOTICE  README.md  aggregator.py  attribute.py  attributeComparer.py  costume.py  costumeComparer.py  database.py  elementComparer.py  main.py  planqk.yml  pyproject.toml  qhana.yml  singleton.py  taxonomie.py  transformer.py  web.py
backend/: QNN.py  QNNCircuitGenerator.py  QNNcircuitExecutor.py  aggregator.py  attribute.py  attributeComparer.py  classicNaiveMaxCutSolver.py  classification.py  clustering.py  costume.py  costumeComparer.py  dataForPlots.py  dataForSavingAndLoading.py  database.py  elementComparer.py  entity.py  entityComparer.py  entityService.py  entitySimilarities.py  labeler.py  logger.py  maxCutSolver.py  plotsForClassification.py  plotsForCluster.py  quantumKMeans.py  savingAndLoading.py  scaling.py  sdpMaxCutSolver.py  similarities.py  splitter.py  taxonomie.py  timer.py  tools.py  transformer.py
gui/: gui.py  muse.ui
microservices/classification/: SPSAOptimizer.py  app.py  circuitExecutor.py  decisionBoundaryPlotter.py  fileService.py  requirements.txt  test.py  variationalSVMCircuitGenerator.py
microservices/clustering/: app.py  appOld.py  clustering.yml  clusteringAlgorithm.py  clusteringCircuitExecutor.py  (+18 more)
qhana/: gui.py  main.py  muse.ui  web.py
subsets/: INFO.txt
templates/: attributes.html  base.html  calculating.html  classification.html  clustering.html  components.html  costumeplan.html  entitySimilarities.html  entityTable.html  home.html  labeler.html  references.html  result.html  scaling.html  taxonomies.html
(+87 files in other folders)
